<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#1D1B41">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clipToOutline="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fondo_redondo_avatar"
            android:clipToOutline="true"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/usuario"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="Volver"
            android:src="@drawable/flecha_volver" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qu_tipo_cliente"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:id="@+id/tarjetaCentral"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/borde_redondo_fondo"
        android:clipToOutline="true"
        android:elevation="4dp"
        android:layout_margin="16dp"
        android:padding="16dp">

        <!-- Contenedor para centrar los botones principales -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/btnNvoNoSocio"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:background="@drawable/botonmenu"
                android:gravity="center"
                android:padding="12dp"
                android:text="No Socio"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:backgroundTint="@null"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <Button
                android:id="@+id/btnNvoSocio"
                app:backgroundTint="@null"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botonmenu"
                android:gravity="center"
                android:padding="12dp"
                android:text="Socio"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necesitas_ayuda"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
