<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#1D1B41">


    <!-- usuario -->
    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>


    <!-- pregunta inicial -->
    <TextView
        android:id="@+id/tvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qu_necesitas_hacer_en_personal"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/tarjetaCentral"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/borde_redondo_fondo"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:clipToOutline="true"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp">

        <!-- nuevo personal -->
        <Button
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/boton_azul"
            android:backgroundTint="@null"
            android:gravity="center"
            android:padding="12dp"
            android:text="Añadir nuevo personal"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!-- nuevo personal -->
        <Button
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/boton_azul"
            android:gravity="center"
            android:padding="12dp"
            android:text="Añadir nuevo personal"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!-- nuevo personal -->
        <Button
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/boton_azul"
            android:gravity="center"
            android:padding="12dp"
            android:text="Añadir nuevo personal"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!-- nuevo personal -->
        <Button
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/boton_azul"
            android:gravity="center"
            android:padding="12dp"
            android:text="Añadir nuevo personal"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!-- nuevo personal -->
        <Button
            android:id="@+id/boton_azul"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/boton_azul"
            android:gravity="center"
            android:padding="12dp"
            android:text="Añadir nuevo personal"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


    </LinearLayout>

    <!-- necesitas ayuda? -->
    <TextView
        android:id="@+id/tvAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/necesitas_ayuda"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
